adhocracy Changelog
===================

1.2beta2dev
-----------

- Readd bin/test to run tests (wrapper for py.test) [joka]

- Update python from 2.7.4 to 2.7.5. Please rebuild python:

    * cd python
    * bin/buildout 

  [joka]

- Update buildout from 1.7 to 2.1.0 (#241). Rerun buildout with: 
    "bin/buildout -n".
  If you have versions conflicts with distribute delete the old one: 
    "rm -r eggs/distribute..".
  [joka]

- The default way to isolate your python environment is to compile 
  python and PIL now instead of using virtualenv. 
  
  Upgrade manual installation:
  ----------------------------

  Checkout python buildout
  
  * git submodule init
  * git submodule update

  Compile python:

  * cd python
  * python boostrap.py && bin/buildout
  
  Reinstall Adhocracy:

  * cd ../
  * rm -rf eggs/*
  * bin/python bootstrap.py
  * bin/buildout

  Upgrade build.sh:
  -----------------

  * rm -rf eggs/*
  * sh build.sh -u
  * sh build.sh -s

  [joka]

- Replace RabbitMQ/amqp with redis/rq. This means that you have to
  provide a working redis instance if you want to use asyncronous
  jobs (highly recommended in production).
  The background process that processes the jobs is renamed from
  'background' to 'worker'. You can call it with
  `bin/paster --plugin=adhocracy worker -c etc/adhocracy.ini`

  Configuration changes:

  * dropped: adhocracy.amqp.* settings are not required anymore.
  * new: adhocracy.redis.host: An IP address redis can bind to 
    (not a hostname!)
  * new: adhocracy.redis.port: The port redis will open
  * new: adhocracy.redis.queue: The queue name

- Added facet search to the instance listing. The listing is based on solr now, 
  please reindex. [joka]

- Instances can have badges now. To create instance badges use the 
  site-administration -> badges form. To assign badges use the 
  instance listing. [joka]]

- New config option "adhocracy.registration.email.blacklist" that