@@ -26,6 +26,7 @@ extends =
 #    buildouts/postgres.cfg
 #    buildouts/adhocracy_setup_database.cfg 
 #    buildouts/apache.cfg
+#    buildouts/varnish.cfg
 #    buildouts/sysvinit.cfg
 #cleanup:
     buildouts/cleanup_pyc.cfg
