@@ -25,6 +25,7 @@ apache_log = /var/log/apache2
 ##############################################################################
 
 [vhost_conf]
+port = {ports:main}
 recipe = collective.recipe.template
 input = ${buildout:directory}/etc/vhost.conf.in
 output = ${buildout:directory}/etc/vhost.conf
