@@ -1,0 +1,60 @@
+##############################################################################
+#
+# Buildout to install the varnish reverse proxy https://www.varnish-cache.org
+#
+##############################################################################
+
+[buildout]
+
+parts +=
+    varnish_build
+    varnish_bin 
+
+varnish-supervisor = 
+    65 varnish (environment=${supervisor:environment} redirect_stderr=true stdout_logfile=var/log/varnish.log stderr_logfile=NONE) ${buildout:bin-directory}/varnish_bin
+    
+##############################################################################
+# System settings
+##############################################################################
+
+[domains]
+varnish = 127.0.0.1
+ 
+[ports]
+varnish = 5000
+ 
+[urls]
+varnish =  http://repo.varnish-cache.org/source/varnish-2.1.5.tar.gz
+
+##############################################################################
+# Set up apache2 vhost
+##############################################################################                                              
+
+[vhost_conf]
+port = ${ports:varnish}
+
+#################################
+# Install and configure varnish #
+################################# 
+
+[varnish_build]
+recipe = zc.recipe.cmmi
+url = ${urls:varnish}
+
+[varnish_bin]
+recipe = plone.recipe.varnish:instance
+bind = ${domains:varnish}:${ports:varnish}
+daemon = ${buildout:parts-directory}/varnish_build/sbin/varnishd
+mode = foreground
+config = ${buildout:directory}/etc/varnish.vcl
+cache-size = 256M
+cache-type = malloc
+
+##############################################################################
+# Set up supervisor to run it all
+##############################################################################
+
+[supervisor]
+programs +=
+    ${buildout:varnish-supervisor}
+
